tests/NormalTests/paczka1/small_fuzzy/48873848.err
Error in line 1: IS1VXNwcw A804 32,4
Error in line 12: zj1aCL3c A804 28,8
Error in line 16: zj1aCL3c S99 13,31
